# src/routers/recipes.js
@@ -7,18 +7,19 @@ import {
   getUserOwnRecipesController,
   addFavorite,
   removeFavorite,
-  getFavoriteRecipes
+  getFavoriteRecipes,
+  getRecipesController
 } from '../controllers/recipes.js';
 import { isValidId } from '../middlewares/isValidId.js';
 
 const router = Router();
 
+router.get("/search", isValidId, ctrlWrapper(getRecipesController));
+router.get('/own', authenticate, ctrlWrapper(getUserOwnRecipesController));
+router.get('/favorites', authenticate, ctrlWrapper(getFavoriteRecipes),);
 router.get('/:recipeId', isValidId, ctrlWrapper(getRecipeByIdController));
 router.post('/', authenticate, ctrlWrapper(createRecipeController));
-router.get('/own', authenticate, ctrlWrapper(getUserOwnRecipesController));
 router.post('/favorites/:recipeId', authenticate, isValidId, ctrlWrapper(addFavorite));
 router.delete('/favorites/:recipeId', authenticate, isValidId, ctrlWrapper(removeFavorite));
-router.get('/favorites', authenticate, ctrlWrapper(getFavoriteRecipes),
-);
 
 export default router;
